--- a/src/styles.css
+++ b/src/styles.css
@@ -17,4 +17,8 @@ body {
   justify-content: center;
   align-items: center;
   border-top: 1px solid black;
+} 
+
+.content {
+  min-height: calc(100vh - 100px);
 }
